--- a/.project
+++ b/.project
@@ -43,6 +43,23 @@
 	</linkedResources>
 	<filteredResources>
 		<filter>
+			<id>1707211555601</id>
+			<name>iperf3</name>
+			<type>5</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-iperf_task_v3_0g.c</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1707211555608</id>
+			<name>iperf3</name>
+			<type>5</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+			</matcher>
+		</filter>
+		<filter>
 			<id>1674762436753</id>
 			<name>Lib/FreeRTOS-Kernel</name>
 			<type>5</type>
