--- a/.project
+++ b/.project
@@ -41,12 +41,40 @@
 			<locationURI>PROJECT_LOC/Lib/TraceRecorder</locationURI>
 		</link>
 		<link>
+			<name>backoffAlgorithm</name>
+			<type>2</type>
+			<locationURI>REPO_ROOT/Lib/backoffAlgorithm</locationURI>
+		</link>
+		<link>
+			<name>coreHTTP</name>
+			<type>2</type>
+			<locationURI>REPO_ROOT/Lib/coreHTTP</locationURI>
+		</link>
+		<link>
 			<name>iperf3</name>
 			<type>2</type>
 			<locationURI>REPO_ROOT/Lib/iperf3</locationURI>
 		</link>
 	</linkedResources>
 	<filteredResources>
+		<filter>
+			<id>1707367177541</id>
+			<name>backoffAlgorithm</name>
+			<type>9</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-source</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1707366563150</id>
+			<name>coreHTTP</name>
+			<type>9</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-source</arguments>
+			</matcher>
+		</filter>
 		<filter>
 			<id>1674762436753</id>
 			<name>Lib/FreeRTOS-Kernel</name>
